findJob-company/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: findjob-service
  namespace: findjob
  labels:
    app: findjob-service
spec:
  type: ClusterIP
  selector:
    app: findjob-company
  ports:
  - name: findjob-input
    port: 9999
    targetPort: findjob-input
    protocol: TCP
