findJob-company/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: findjob-ingress
  namespace: findjob
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: findjob.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: findjob-service
          servicePort: 9999
